--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -4,20 +4,19 @@
 <head>
 <meta charset="utf-8">
 <?php echo $this->headTitle() ?>
-
 <?php echo $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1.0') ?>
-
-<!-- Le styles -->
-<?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/theme/favicon.ico'))
-                        ->appendStylesheet($this->basePath() . '/theme/default/layout/layout.css')
-                        ->appendStylesheet($this->basePath() . '/theme/default/help/index/index.css')
-                        ->appendStylesheet($this->basePath() . '/theme/default/help/article/article.css') ?>
-
+<!-- css -->
+<?php echo $this->headLink( 
+							array('rel' => 'shortcut icon', 
+								  'type' => 'image/vnd.microsoft.icon', 
+								  'href' => $this->basePath('theme/favicon.ico')
+								 )
+						  )
+                ->appendStylesheet($this->basePath('theme/default/layout/layout.css'));
+?>
 <!-- Scripts -->
 <?php echo $this->headScript()->appendFile($this->basePath() . '/js/html5.js', 'text/javascript', array('conditional' => 'lt IE 9',))
 							  ->appendFile($this->basePath() . '/js/jquery.min.js')
-                              ->appendFile($this->basePath() . '/js/jquery.strectch.menu.js')
-                              ->appendFile($this->basePath() . '/js/tools.js')
                              ?>
 
 </head>
