--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -41,17 +41,17 @@ $(document).ready(function(){
 			</div><!-- headerTop end -->
    			<ul  id='headerNavigation'>
    				<li id='headerNavLeftBg'>&nbsp;</li>
-   			  	<li id='headerIndex' class='NavItem' request-url='http://www.baidu.com'>&nbsp;</li>
+   			  	<li id='headerIndex' class='NavItem' request-url='<?php echo $this->url('home');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
-   			  	<li id='headerAbout' class='NavItem'>&nbsp;</li>
+   			  	<li id='headerAbout' class='NavItem' request-url='<?php echo $this->url('about');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
-   			  	<li id='headerProfessionField' class='NavItem'>&nbsp;</li>
+   			  	<li id='headerProfessionField' class='NavItem' request-url='<?php echo $this->url('professional');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
-   			  	<li id='headerSuccessCase' class='NavItem'>&nbsp;</li>
+   			  	<li id='headerSuccessCase' class='NavItem' request-url='<?php echo $this->url('case');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
-   			  	<li id='headerEliteTeam' class='NavItem'>&nbsp;</li>
+   			  	<li id='headerEliteTeam' class='NavItem' request-url='<?php echo $this->url('team');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
-   			  	<li id='headerNews' class='NavItem'>&nbsp;</li>
+   			  	<li id='headerNews' class='NavItem' request-url='<?php echo $this->url('news');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
    			  	<li id='headerNavRightBg'>&nbsp;</li>
    			</ul><!-- headerNavigation end -->
