--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -60,8 +60,17 @@ $(document).ready(function(){
             <?php echo $this->content; ?>
         </div> <!-- mainer end -->
 		<div id='footer'>
-    		<p>Copyright @ 2006-2012 ETAH Corporation. All Rights Reserved.</p>
-		</div><!-- footer end  -->
+			<ul  id='footerTop'>
+   				<li  class='Item'><a href='#'>免责声明</a></li>
+   				<li  class='Item'><a href='#'>加入我们</a></li>
+   				<li  class='Item'><a href='#'>康润微博</a></li>
+   				<li  class='Item'><a href='#'>热线电话</a></li>
+   			</ul><!-- headerNavigation end -->
+			<div id='footerBottom'>
+				Copyright &copy; 2012-2016&nbsp;康润律师事务所&nbsp;&nbsp;
+				<a href='http://www.miibeian.gov.cn' class='beian'>赣ICP备案xxxxxx号</a>
+			</div><!-- footerBottom -->
+    	</div><!-- footer end  -->
 	</div><!-- AllContainer end  -->
 </div><!-- wrap end  -->
 </body>
