--- a/web/public/theme/default/layout/layout.css
+++ b/web/public/theme/default/layout/layout.css
@@ -21,7 +21,7 @@ margin:0px auto;
 	width:100%;
 	height:143px;
 	overflow:hidden;
-	border:1px solid #ff0000;
+	/* border:1px solid #ff0000; */
 }
 #mainer{
 	width:100%;
@@ -32,11 +32,12 @@ margin:0px auto;
 }
 #footer{
 	width:100%;
-	height:100px;
-	border:1px solid #ff0000;
+	height:91px;
+	overflow:hidden;
+	/* border:1px solid #ff0000; */
 	margin-top:20px;
 	overflow:hidden;
-	text-align:center;
+	
 }
 
 /*-----------网站header的容器定义----------*/
@@ -131,6 +132,61 @@ margin:0px auto;
 	background:url(headerNews.jpg) no-repeat
 }
 
+/*-----------网站footer的容器定义----------*/
+#footerTop{
+	width:100%;
+	height:45px;
+	overflow:hidden;
+	padding:0px;
+	margin:0px;
+	font-size:13px;
+	line-height:45px;
+	background:url(footerTopBg.jpg) repeat-x;
+	/* border:1px solid #ff0000; */	
+}
+
+
+#footerBottom{
+	width:100%;
+	height:46px;
+	overflow:hidden;
+	line-height:46px;
+	font-size:13px;
+	color:#737373;
+	text-align:center;
+	background:url(footerBottomBg.jpg) repeat-x;
+	/* border:1px solid #ff0000; */	
+}
+
+
+#footer a{
+	text-decoration:none;
+}
+#footer a:hover{
+	text-decoration:underline;
+}
+
+
+#footerTop li.Item{
+	display:inline;
+	float: left;
+	padding:0px 10px;
+	cursor:pointer;
+}
+
+#footerTop li.Item a{
+	color:#255EC5;
+}
+#footerTop li.Item a:hover{
+	color:#ff0000;
+}
+
+#footerBottom a.beian{
+	color:#737373;
+}
+#footerBottom a.beian:hover{
+	color:#ff0000;
+}
 
 
 
