--- a/web/public/theme/default/layout/style.css
+++ b/web/public/theme/default/layout/style.css
@@ -24,18 +24,16 @@ margin:0px auto;
 	/* border:1px solid #ff0000; */
 }
 #mainer{
-	width:100%;
-	height:600px;
-	border:1px solid #ff0000;
-	overflow:hidden;
-	margin-top:10px;
+	width:986px;
+	height:576px;
+	/* border:1px solid #ff0000; */
 }
 #footer{
 	width:100%;
-	height:91px;
+	height:101px;
 	overflow:hidden;
 	/* border:1px solid #ff0000; */
-	margin-top:20px;
+	/* margin-top:20px; */
 	overflow:hidden;
 	
 }
