网站的基础框架搭好了

--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -13,7 +13,8 @@
 								 )
 						  )
                 ->appendStylesheet($this->basePath('theme/default/layout/style.css'))
-                ->appendStylesheet($this->basePath('theme/default/index/style.css'));
+                ->appendStylesheet($this->basePath('theme/default/index/style.css'))
+                ->appendStylesheet($this->basePath('theme/default/common/layout.css'));
 				
 ?>
 <!-- Scripts -->
