添加文章模块的内容，添加一个文章模块组件

--- a/web/module/Web/view/web/common/layout.phtml
+++ b/web/module/Web/view/web/common/layout.phtml
@@ -9,16 +9,20 @@
 	<tr>
 		<td colspan='2'>
 			<div id='SmallSlidePictureContainer'></div>
-			<div id='SideArticleColumn'></div>
+			<div id='SideArticleColumn'><?php echo $this->sideArticleColumnViewModel;?></div>
 		</td>
 	</tr> 
 	<tr>
 		<td><div id='SidebarPhoneNumber'></div></td>
 		<td rowspan='2'>
-			<div class='EqualArticleColumn'></div>
+			<div class='EqualArticleColumn'>
+				<?php echo $this->leftArticleColumnViewModel;?>
+			</div><!-- EqualArticleColumn end -->
 		</td>
 		<td rowspan='2'>
-			<div class='EqualArticleColumn'></div>
+			<div class='EqualArticleColumn'>
+				<?php echo $this->rightArticleColumnViewModel;?>
+			</div><!-- EqualArticleColumn end -->
 		</td>
 	</tr>
 	<tr>
