--- a/web/module/Web/view/web/index/index.phtml
+++ b/web/module/Web/view/web/index/index.phtml
@@ -1,3 +1,6 @@
+<?php echo $this->Navigation()->hengleike()->render(); ?>
+<?php echo $this->Navigation()->Links()->render(); ?>
+
 <div id='SlidePictureContainer'>
 	
 </div><!-- SlidePictureContainer end -->
