--- a/admin/module/Application/view/application/index/sidebar.phtml
+++ b/admin/module/Application/view/application/index/sidebar.phtml
@@ -1,6 +1,6 @@
 <?php 
   
-  echo $this->navigation()->admin()->renderSidebar($module);
+  //echo $this->navigation()->admin()->renderSidebar($module);
 
 
 ?>
