去掉不必要的模块，把帮助中心模块改成文章发布模块

--- a/admin/module/Application/view/application/index/sidebar.phtml
+++ b/admin/module/Application/view/application/index/sidebar.phtml
@@ -1,11 +1,8 @@
-<?php 
-  
-  //echo $this->navigation()->admin()->renderSidebar($module);
-
-
-?>
+<?php   
 	
-	
+	echo $this->navigation()->admin()->renderSidebar($module);
+
+?>	
 	
 	
 
