--- a/admin/module/Application/view/application/index/admin.phtml
+++ b/admin/module/Application/view/application/index/admin.phtml
@@ -53,7 +53,7 @@ $(function(){
 				</ul>
 			</div>
 			<div id="navMenu">
-				<?php //echo $this->navigation()->Admin()->renderNav();?>
+				<?php echo $this->navigation()->Admin()->renderNav();?>
 			</div><!-- navMenu end -->
 		</div><!-- header end -->
 
@@ -64,7 +64,7 @@ $(function(){
 				</div>
 			</div>
 			<div id="sidebar">
-				<?php //echo $this->navigation()->Admin()->renderSidebar(); ?>
+				<?php echo $this->navigation()->Admin()->renderSidebar(); ?>
 			</div><!-- sidebar -->
 		</div>
 		<div id="container">
