--- a/web/module/Web/view/web/index/index.phtml
+++ b/web/module/Web/view/web/index/index.phtml
@@ -1,9 +1,4 @@
-<?php echo $this->Navigation()->hengleike()->render(); ?>
-<?php echo $this->Navigation()->Links()->render(); ?>
-
-<div id='SlidePictureContainer'>
-	
-</div><!-- SlidePictureContainer end -->
+<div id='SlidePictureContainer'></div><!-- SlidePictureContainer end -->
 <table id='ArticleColumnContainer' cellpadding='0' cellspacing='0'>
 	<tr>
 		<td>
