1.首页的基本布局确定
2.每个栏目页的标题的都调整到合适的设置

--- a/web/module/Web/view/web/index/index.phtml
+++ b/web/module/Web/view/web/index/index.phtml
@@ -1,69 +1,9 @@
 <div id='SlidePictureContainer'></div><!-- SlidePictureContainer end -->
 <table id='ArticleColumnContainer' cellpadding='0' cellspacing='0'>
 	<tr>
-		<td>
-			<ul class='ArticleColumnItem'>
-				<li class='ArticleColumnItemLeft'>&nbsp;</li>
-				<li class='ArticleColumnItemMiddle'>
-					<ul class='titleContainer'>
-						<li class='first'>
-							<span class='ArticleColumnItemTitle'>康润新闻</span>
-							<span class='ArticleColumnItemMore'>More</span>
-						</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-					</ul>
-				</li>
-				<li class='ArticleColumnItemRight'>&nbsp;</li>
-			</ul><!-- ul.ArticleColumnItem end -->
-		</td>
-		<td>
-			<ul class='ArticleColumnItem'>
-				<li class='ArticleColumnItemLeft'>&nbsp;</li>
-				<li class='ArticleColumnItemMiddle'>
-					<ul class='titleContainer'>
-						<li class='first'>
-							<span class='ArticleColumnItemTitle'>康润新闻</span>
-							<span class='ArticleColumnItemMore'>More</span>
-						</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-					</ul>
-				</li>
-				<li class='ArticleColumnItemRight'>&nbsp;</li>
-			</ul><!-- ul.ArticleColumnItem end -->
-		</td>
-		<td>
-			<ul class='ArticleColumnItem'>
-				<li class='ArticleColumnItemLeft'>&nbsp;</li>
-				<li class='ArticleColumnItemMiddle'>
-					<ul class='titleContainer'>
-						<li class='first'>
-							<span class='ArticleColumnItemTitle'>康润新闻</span>
-							<span class='ArticleColumnItemMore'>More</span>
-						</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-						<li>测试标题测试标题测试标题测试标题测试标题</li>
-					</ul>
-				</li>
-				<li class='ArticleColumnItemRight'>&nbsp;</li>
-			</ul><!-- ul.ArticleColumnItem end -->
-		</td>
+		<td><?php echo $this->leftArticleColumnViewModel;?></td>
+		<td><?php echo $this->middleArticleColumnViewModel;?></td>
+		<td><?php echo $this->rightArticleColumnViewModel;?></td>
 	</tr>
 </table><!-- ArticleColumnContainer end -->
 
