--- a/web/public/theme/default/index/style.css
+++ b/web/public/theme/default/index/style.css
@@ -9,10 +9,10 @@
 /*--------------------------------首页三个文章栏目的容器--------------------------------*/
 #ArticleColumnContainer{
 	width:100%;
-	height:284px;
-	margin:0px auto;
-	background:#D9D9D9;
+	height:280px;
+	/*border:1px solid #ff0000;*/
 	background:url(ArticleColumnContainerBg.jpg) repeat-x;
+	background:#f1f1f1;
 }
 .ArticleColumnItem{
 	width:329px;
@@ -21,6 +21,8 @@
 	margin-top:2px;
 	padding:0px;
 	float:left;
+	/*border-bottom:1px solid #dedede;*/
+	/*border:1px solid #ff0000;*/
 }
 .ArticleColumnItemLeft{
 	width:24px;
@@ -60,6 +62,9 @@
 	line-height:25px;
 	font-size:12px;
 	text-align:center;
+}
+.ArticleColumnItemMiddle ul.titleContainer li a{
+	color:#000000;
 }
 .ArticleColumnItemMiddle ul.titleContainer li.first{
 	display:block;
