--- a/web/module/Web/view/web/common/layout.phtml
+++ b/web/module/Web/view/web/common/layout.phtml
@@ -1,4 +1,6 @@
-<div id='BannerPictureContainer'></div><!-- BannerPictureContainer end -->
+<div id='BannerPictureContainer'>
+	<?php echo $this->topBannerViewModel;?>
+</div><!-- BannerPictureContainer end -->
 <table id='ColumnsLayoutTable' border="0" cellpadding='0' cellspacing='0'>
 	<tr>
 		<td width='231' rowspan='2'>
