1. 学会从静态路由映射到具体的控制器  方法  参数上面 2. 添加文章分类侧边栏组件

--- a/web/public/theme/default/common/layout.css
+++ b/web/public/theme/default/common/layout.css
@@ -28,11 +28,11 @@
 	/*border:1px solid #ff0000;*/
 }
 
-#SidebarNavigation{/*侧边栏导航条*/
+.SidebarNavigation{/*侧边栏文章分类导航条*/
 	width:231px;
 	height:282px;
-	background:url(SidebarNavigation.jpg) no-repeat;
 	margin:0px;
+	background:#EEEEEE;
 	padding:0px;
 }
 #SidebarPhoneNumber{/*侧边栏400电话*/
@@ -87,5 +87,26 @@
 	float:right;
 }
 
+/*侧边栏文章分类导航条-父级的名称*/
+.SidebarNavigation li.parent-article-category{
+	font-size:24px;
+	text-align:center;
+	height:50px;
+	line-height:50px;
+	background:#126EAF;
+	color:#ffffff;
+}
 
+.SidebarNavigation li.children-article-category{
+	font-size:16px;
+	text-align:center;
+	height:46px;
+	line-height:46px;
+	
+	background:#EEEEEE;
+	border-bottom:1px solid #E0E0E0;
+}
 
+.SidebarNavigation li.children-article-category a{
+	color:#666865;
+}
