--- a/web/module/Web/view/web/common/layout.phtml
+++ b/web/module/Web/view/web/common/layout.phtml
@@ -4,7 +4,7 @@
 <table id='ColumnsLayoutTable' border="0" cellpadding='0' cellspacing='0'>
 	<tr>
 		<td width='231' rowspan='2'>
-			<ul id='SidebarNavigation'></ul>
+			<?php echo $this->articleCategorySidebarViewModel;?>
 		</td>
 		<td colspan='2' height="50">&nbsp;</td>
 	</tr>
