--- a/web/module/Web/view/web/news/category.phtml
+++ b/web/module/Web/view/web/news/category.phtml
@@ -1,1 +1,9 @@
-文章分类页
+<div id='BannerPictureContainer'>
+	<?php echo $this->topBannerViewModel;?>
+</div><!-- BannerPictureContainer end -->
+<table>
+	<tr>
+		<td valign='top'><?php echo $this->articleSidebarCategoryViewModel;?></td>
+		<td><?php echo $this->articleListControlViewModel;?></td>
+	</tr>
+</table>
