修改一个setTemplateStyle方法，避免在每个组件中都要重复实现setTemplate方法，而仅仅是改变一个路径。 使用后期静态绑定static:class的来得到完整的包含命名空间的完整类名，然后通过定位字符串的最后一次的方法去掉最后一层目录， 然后使用替换字符串的方法去掉反斜线，因为反斜线会影响zf2对于模版的加载

--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -12,9 +12,9 @@
 								  'href' => $this->basePath('theme/favicon.ico')
 								 )
 						  )
-                ->appendStylesheet($this->basePath('theme/default/layout/style.css'))
-                ->appendStylesheet($this->basePath('theme/default/index/style.css'))
-                ->appendStylesheet($this->basePath('theme/default/common/layout.css'));
+                ->prependStylesheet($this->basePath('theme/default/layout/style.css'))
+                ->prependStylesheet($this->basePath('theme/default/index/style.css'))
+                ->prependStylesheet($this->basePath('theme/default/common/layout.css'));
 				
 ?>
 <!-- Scripts -->
