--- a/web/module/Web/view/web/index/index.phtml
+++ b/web/module/Web/view/web/index/index.phtml
@@ -1,4 +1,6 @@
-<div id='SlidePictureContainer'></div><!-- SlidePictureContainer end -->
+<div id='SlidePictureContainer'>
+	<?php echo $this->javascriptSlideViewModel;?>
+</div><!-- SlidePictureContainer end -->
 <table id='ArticleColumnContainer' cellpadding='0' cellspacing='0'>
 	<tr>
 		<td><?php echo $this->leftArticleColumnViewModel;?></td>
