开始正式的把外面的幻灯片效果做成幻灯片组件

--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -18,9 +18,9 @@
 				
 ?>
 <!-- Scripts -->
-<?php echo $this->headScript()->appendFile($this->basePath() . '/js/html5.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-							  ->appendFile($this->basePath() . '/js/jquery.min.js')
-                             ?>
+<?php echo $this->headScript()->prependFile($this->basePath('js/html5.js') , 'text/javascript', array('conditional' => 'lt IE 9'))
+							  ->prependFile($this->basePath('js/jquery.min.js') );
+?>
 
 <script type='text/javascript'>
 $(document).ready(function(){
