首页的导航栏上面的内容发生变化，去掉成功案例，添加联系我们

--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -49,11 +49,11 @@ $(document).ready(function(){
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
    			  	<li id='headerProfessionField' class='NavItem' request-url='<?php echo $this->url('professional');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
-   			  	<li id='headerSuccessCase' class='NavItem' request-url='<?php echo $this->url('case');?>'>&nbsp;</li>
-   			  	<li class='headerNavDivideBg'>&nbsp;</li>
    			  	<li id='headerEliteTeam' class='NavItem' request-url='<?php echo $this->url('team');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
    			  	<li id='headerNews' class='NavItem' request-url='<?php echo $this->url('news');?>'>&nbsp;</li>
+   			  	<li class='headerNavDivideBg'>&nbsp;</li>
+   			  	<li id='headerContact' class='NavItem' request-url='<?php echo $this->url('contact');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
    			  	<li id='headerNavRightBg'>&nbsp;</li>
    			</ul><!-- headerNavigation end -->
