--- a/web/public/theme/default/index/style.css
+++ b/web/public/theme/default/index/style.css
@@ -2,8 +2,8 @@
 #SlidePictureContainer{
 	width:100%;
 	height:332px;
-	border:1px solid #ff0000;
-	/*background:url(SlidePicture1.jpg) no-repeat center; */
+	/*border:1px solid #ff0000;
+	background:url(SlidePicture1.jpg) no-repeat center; */
 }
 
 /*--------------------------------首页三个文章栏目的容器--------------------------------*/
