--- a/web/public/theme/default/layout/style.css
+++ b/web/public/theme/default/layout/style.css
@@ -128,10 +128,10 @@ margin:0px auto;
 	background:url(headerProfessionField.jpg) no-repeat;
 }
 
-#headerSuccessCase {
+#headerContact {
 	display: inline;
 	float: left;
-	background:url(headerSuccessCase.jpg) no-repeat
+	background:url(headerContact.jpg) no-repeat
 }
 #headerEliteTeam {
 	display: inline;
