--- a/web/module/Cms/src/Cms/Component/Slide/Javascript/Template/Style1.phtml
+++ b/web/module/Cms/src/Cms/Component/Slide/Javascript/Template/Style1.phtml
@@ -1,41 +1,43 @@
-<div class="homepage-slider">
-		<a href="#" class="btn-previous" onmouseover="set_hover_on();" onmouseout="set_hover_off();"  onclick="scrollLeft(); return false;">&nbsp;</a> 
-		<a href="#" class="btn-next"     onmouseover="set_hover_on();" onmouseout="set_hover_off();"  onclick="scrollRight(); return false;">&nbsp;</a>
-		<span class="tag">&nbsp;</span> 
-		<span class="rounded-corners">&nbsp;</span>
-		<!--  <div id="aktuals_field" style="overflow: hidden; position: relative;">-->
-				<table>
-					<tr>
-					<?php foreach($this->slideElementList as $element):?>	
-						<td>
-							<div class="homepage-slider-item" id="aktuals1" style='background: url(<?php echo $element->imagePath;?>) 0 0 no-repeat;'>
-								<a class="title" href="<?php echo $element->href;?>" > 
-											<i><?php echo $element->title;?></i>
-											<u><?php echo $element->description;?></u>
-								</a>
-								<div class="background"></div>
-							</div>
-						</td>
-					<?php endforeach;?>				
-					</tr>
-				</table>
-		<!-- </div> -->
-		<!-- aktuals_field end -->
-	<?php if($this->showShadow):?>
-		<div class="homepage-slider-image-shadow">&nbsp;</div><!-- END .homepage-slider-image-shadow -->
-	<?php endif;?>				
-	<?php if($this->showNavigation):?>
-		<div class="navigation">
-			<a href="#" id="aktuals1_btn" onclick="scrollToElem(1); return false;" class="active"></a>
-			<a href="#" id="aktuals2_btn" onclick="scrollToElem(2); return false;"></a>
-			<a href="#" id="aktuals3_btn" onclick="scrollToElem(3); return false;"></a>
-			<a href="#" id="aktuals4_btn" onclick="scrollToElem(4); return false;"></a>
-			<a href="#" id="aktuals5_btn" onclick="scrollToElem(5); return false;"></a>
-		</div><!-- navigation end -->
-	<?php endif;?>
-</div><!-- homepage-slider end -->
-<!--[if lte IE 7]>
-<style type="text/css">
-	html .jqueryslidemenu { height: 1%; } /* Holly Hack for IE7 and below */
-</style>
-<![endif]-->
+<div class='slide-javascript-control'>
+	<a href="javascript:;" class="btn-previous" >&nbsp;</a> 
+	<a href="javascript:;" class="btn-next"     >&nbsp;</a>
+	<table cellpadding='0' cellspacing='0'>
+		<tr>
+		<?php foreach($this->slideElementList as $element):?>	
+			<td>
+				<div class="slider-item" style='width:984px;'>
+					<img src='<?php echo $element->imagePath;?>' width='984' height='313' />
+					<div class="background">
+						<div class='title'><?php echo $element->title;?></div>
+						<div class='description'><?php echo $element->description;?></div>
+					</div>
+				</div>
+			</td>
+		<?php endforeach;?>				
+		</tr>
+	</table>
+</div>
+<script type='text/javascript'>
+
+	$(".slide-javascript-control").find('.btn-previous').click(function(){
+		
+		$(".slide-javascript-control table tbody").find('td:first').find('.slider-item').animate({width:'0px'},1000,function(){
+
+			$(".slide-javascript-control table tbody").find('td:first').remove().appendTo( $(".slide-javascript-control table tbody tr"));
+
+			$(".slide-javascript-control table tbody").find('td').find('.slider-item').css('width','984px');
+			
+		});
+
+		
+				
+
+
+		
+
+		
+		
+	});
+</script>
+
+
