--- a/web/public/component/slide/javascript/css/style.css
+++ b/web/public/component/slide/javascript/css/style.css
@@ -1,10 +1,18 @@
-.homepage-slider {
+/*幻灯片的布局控制容器*/
+.slide-javascript-control{
 	width: 100%;
+	height:auto;
 	position: relative;
 	overflow: hidden;
+	/* border:1px solid #ff0000; */
 }
 
-.homepage-slider .tag {
+.slide-javascript-control .slider-item{/*幻灯片的容器*/
+	height: 313px;
+	border:1px solid #ff0000;
+}
+
+.slide-javascript-control .tag {
 	width: 81px;
 	height: 81px;
 	background: url(../images/top-stories-tag.png) 0 0 no-repeat;
@@ -12,7 +20,7 @@
 	z-index: 1;
 }
 
-.homepage-slider .rounded-corners {
+.slide-javascript-control .rounded-corners {
 	width: 900px;
 	height: 3px;
 	background: url(../images/homepage-slider-rounded-corners.png) 0 0 no-repeat;
@@ -20,98 +28,91 @@
 	z-index: 2;
 }
 
-
-
-.homepage-slider .btn-previous {
-	width: 450px;
+.slide-javascript-control .btn-previous {
+	width: 56px; 
 	height: 350px;
-	text-indent: 5000px;
+	left:0px;
+	/* border:1px solid #ff0000; */ 
 	position: absolute;
-	z-index: 2;
+	z-index: 100;
 }
-
-.homepage-slider .btn-previous:hover {
-	background: url(../images/homepage-slider-btn-previous-bg.png) center left no-repeat;
-}
-
-.homepage-slider .btn-next {
-	margin: 0 0 0 450px;
-	width: 450px;
+.slide-javascript-control .btn-next {
+	width: 56px; 
 	height: 350px;
-	text-indent: 5000px;
-	position: absolute;
-	z-index: 2;
+	right:0px;
+	/* border:1px solid #ff0000; */ 
+	position: absolute;   
+	z-index: 100;
 }
 
-.homepage-slider .btn-next:hover {
+.slide-javascript-control .btn-previous:hover {
+	background: url(../images/homepage-slider-btn-previous-bg.png) top left no-repeat;
+}
+.slide-javascript-control .btn-next:hover {
 	background: url(../images/homepage-slider-btn-next-bg.png) center right no-repeat;
 }
 
-.homepage-slider-item {
-	width: 900px;
-	height: 350px;
-	float: left;
-}
-
-.homepage-slider-item .background {
-	margin: 237px 0 0 0;
-	width: 900px;
-	height: 83px;
-	background: url(../images/top-stories-info-bg.png) 0 0 no-repeat;
+.slide-javascript-control .slider-item img{
 	position: absolute;
-	z-index: 1;
+	z-index:1;
 }
 
-.homepage-slider-item .title {
-	margin: 237px 0 0 0;
-	padding: 13px 220px 0 16px;
-	width: 664px;
-	height: 70px;
-	color: #fff;
-	text-decoration: none;
-	display: block;
+/*幻灯片下方的黑色透明背景图*/
+.slide-javascript-control .slider-item .background {
+	width: 100%;
+	bottom:0px;
+	height: 83px;
+	background: url(../images/top-stories-info-bg.png) 0 0 repeat-x;
 	position: absolute;
 	z-index: 2;
 }
 
-.homepage-slider-item .title i {
+
+.slide-javascript-control .slider-item .background .title{
+	width: 80%;
+	height: 70px;
+	margin:0px auto;
+	color: #fff;
+	height:40px;
+	line-height:40px;
+	text-decoration: none;
+	display: block;
+	cursor:pointer;
+}
+
+.slide-javascript-control .slider-item .background .title:hover{
+	color: #00c6ff;
+	text-decoration: underline;
+}
+
+
+.slide-javascript-control .slider-item .background .description {
+	width: 80%;
 	height: 18px;
-	font-size: 16px;
-	font-weight: bold;
+	color: #ffffff;
+	margin:0px auto;
+	font-size: 12px;
 	font-style: normal;
 	margin-bottom: 5px;
 	display: block;
 	overflow: hidden;
 }
 
-.homepage-slider-item .title:hover i {
-	color: #00c6ff;
-	text-decoration: underline;
-}
-
-.homepage-slider-item .title u {
-	height: 36px;
-	text-decoration: none;
-	display: block;
-	overflow: hidden;
-}
-
 /*幻灯片导航栏的底部的阴影部分的内容*/
-.homepage-slider-image-shadow {
+.slide-javascript-control .image-shadow {
 	width: 900px;
 	height: 9px;
 	background: url(../images/image-shadow-5.png) center 1px no-repeat;
 }
 
-
 /*幻灯片导航栏的相关内容*/
-.homepage-slider .navigation {
+.slide-javascript-control .navigation {
 	padding: 16px 0;
 	margin: -9px 0 5px 400px;
 	overflow: hidden;
 }
 
-.homepage-slider .navigation a {
+.slide-javascript-control .navigation a {
 	margin: 0 10px 0 0;
 	width: 10px;
 	height: 10px;
@@ -120,11 +121,11 @@
 	float: left;
 }
 
-.homepage-slider .navigation a:hover {
+.slide-javascript-control .navigation a:hover {
 	background-position: 0 -10px;
 }
 
-.homepage-slider .navigation .active {
+.slide-javascript-control .navigation .active {
 	background-position: 0 -10px;
 }
 
