--- a/web/module/Web/view/web/news/category.phtml
+++ b/web/module/Web/view/web/news/category.phtml
@@ -1,9 +1,12 @@
 <div id='BannerPictureContainer'>
 	<?php echo $this->topBannerViewModel;?>
 </div><!-- BannerPictureContainer end -->
-<table>
+<table cellspacing='0' cellpadding='0' border='0' width='100%'>
 	<tr>
-		<td valign='top'><?php echo $this->articleSidebarCategoryViewModel;?></td>
+		<td valign='top' rowspan='2' width='260'><?php echo $this->articleSidebarCategoryViewModel;?></td>
+		<td height='30'><?php echo $this->articleBreadCrumbViewModel;?></td>
+	</tr>
+	<tr>
 		<td><?php echo $this->articleListControlViewModel;?></td>
 	</tr>
 </table>
