文章列表组件完成css样式的调整，但是还没有翻页

--- a/web/module/Cms/src/Cms/Component/Article/ListControl/Template/Style1.phtml
+++ b/web/module/Cms/src/Cms/Component/Article/ListControl/Template/Style1.phtml
@@ -1,4 +1,4 @@
-<ul class='article-column-ul'>
+<ul class='article-list-control'>
 	<?php if(isset($this->articleList)):?>
 		<?php foreach($this->articleList as $article):?>					
 			<li>
