--- a/web/public/theme/default/layout/style.css
+++ b/web/public/theme/default/layout/style.css
@@ -47,7 +47,7 @@ margin:0px auto;
 	height:101px;
 	overflow:hidden;
 	/* border:1px solid #ff0000; */
-	/* margin-top:20px; */
+	margin-top:5px;
 	overflow:hidden;
 	
 }
