完成联系我们的框架性页面，以后还要再改的

--- a/web/public/component/slide/javascript/css/style.css
+++ b/web/public/component/slide/javascript/css/style.css
@@ -9,7 +9,7 @@
 
 .slide-javascript-control .slider-item{/*»ÃµÆÆ¬µÄÈÝÆ÷*/
 	height: 313px;
-	border:1px solid #ff0000;
+	/* border:1px solid #ff0000; */
 }
 
 .slide-javascript-control .tag {
