--- a/web/module/Web/view/web/contact/index.phtml
+++ b/web/module/Web/view/web/contact/index.phtml
@@ -1,1 +1,12 @@
-联系我们的页面
+<div id='BannerPictureContainer'>
+	<?php echo $this->topBannerViewModel;?>
+</div><!-- BannerPictureContainer end -->
+<table cellspacing='0' cellpadding='0' border='0' width='100%'>
+	<tr>
+		<td valign='top' rowspan='2' width='260'><?php echo $this->articleSidebarCategoryViewModel;?></td>
+		<td valign='top' height='30'><?php echo $this->articleBreadCrumbViewModel;?></td>
+	</tr>
+	<tr>
+		<td valign='top'><?php echo $this->articleListControlViewModel;?></td>
+	</tr>
+</table>
