1.完成联系我们的基础框架 2.侧边栏添加一种类型，就是原来是父分类和子分类形成侧边栏，但是像联系我们这种分类，只有一个分类和分类下的文章

--- a/web/module/Application/view/layout/layout.phtml
+++ b/web/module/Application/view/layout/layout.phtml
@@ -53,7 +53,7 @@ $(document).ready(function(){
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
    			  	<li id='headerNews' class='NavItem' request-url='<?php echo $this->url('news');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
-   			  	<li id='headerContact' class='NavItem' request-url='<?php echo $this->url('contact');?>'>&nbsp;</li>
+   			  	<li id='headerContact' class='NavItem' request-url='<?php echo $this->url('contact-content-route');?>'>&nbsp;</li>
    			  	<li class='headerNavDivideBg'>&nbsp;</li>
    			  	<li id='headerNavRightBg'>&nbsp;</li>
    			</ul><!-- headerNavigation end -->
