--- a/web/module/Cms/src/Cms/Component/Article/Details/Template/Style1.phtml
+++ b/web/module/Cms/src/Cms/Component/Article/Details/Template/Style1.phtml
@@ -1,14 +1,21 @@
 <div class="article-details">
-		<div class="article-details-title"><?php echo $this->article['title'];?></div>
-		<?php if(isset($this->article['sub_title'])&&strlen(trim($this->article['sub_title']))):?>
-			<div class="article-details-subtitle">---<?php echo $this->article['sub_title'];?></div>
+		<?php if($this->showArticleSubTitle):?>
+			<div class="article-details-title"><?php echo $this->article['title'];?></div>
 		<?php endif;?>
+		<?php if($this->showArticleSubTitle):?>
+			<?php if(isset($this->article['sub_title'])&&strlen(trim($this->article['sub_title']))):?>
+			<div class="article-details-subtitle">---<?php echo $this->article['sub_title'];?></div>
+			<?php endif;?>
+		<?php endif;?>
+		
+		<?php if($this->showArticleDetailsInfo):?>
 		<table class='article-details-info'>
 			<tr>
 				<td>点击数:<?php echo $this->article['hits'];?></td>
 				<td>发布时间:<?php echo $this->article['add_time'];?></td>
 			</tr>
 		</table>
+		<?php endif;?>
 		<div class="article-details-content">
 			<?php echo $this->article['content'];?>
 		</div>
