--- a/web/module/Web/view/web/contact/content.phtml
+++ b/web/module/Web/view/web/contact/content.phtml
@@ -7,6 +7,6 @@
 		<td valign='top' height='30'><?php echo $this->articleBreadCrumbViewModel;?></td>
 	</tr>
 	<tr>
-		<td valign='top'><?php echo $this->articleListControlViewModel;?></td>
+		<td valign='top'><?php echo $this->articleDetailsViewModel;?></td>
 	</tr>
 </table>
