--- a/web/public/theme/default/layout/style.css
+++ b/web/public/theme/default/layout/style.css
@@ -38,7 +38,7 @@ margin:0px auto;
 	/* border:1px solid #ff0000; */
 }
 #mainer{
-	width:986px;
+	width:100%;
 	height:auto;
 	/*border:1px solid #ff0000;*/
 }
