--- a/web/module/Web/view/web/common/layout.phtml
+++ b/web/module/Web/view/web/common/layout.phtml
@@ -1,34 +1,35 @@
 <div id='BannerPictureContainer'>
 	<?php echo $this->topBannerViewModel;?>
 </div><!-- BannerPictureContainer end -->
-<table id='ColumnsLayoutTable' border="0" cellpadding='0' cellspacing='0'>
+<table id='ColumnsLayoutTable' border="0" cellspacing='0' cellpadding='0' >
 	<tr>
-		<td width='231' rowspan='2'>
+		<td valign='top'>
 			<?php echo $this->articleCategorySidebarViewModel;?>
 		</td>
-		<td colspan='2' height="50">&nbsp;</td>
+		<td colspan='2' valign='top'>
+			<table cellspacing='0' cellpadding='0'>
+				<tr>
+					<td><div id='SmallSlidePictureContainer'></div></td>
+					<td><div id='SideArticleColumn'><?php echo $this->sideArticleColumnViewModel;?></div></td>
+				</tr>
+			</table>
+		</td>
 	</tr>
 	<tr>
-		<td colspan='2'>
-			<div id='SmallSlidePictureContainer'></div>
-			<div id='SideArticleColumn'><?php echo $this->sideArticleColumnViewModel;?></div>
-		</td>
-	</tr> 
-	<tr>
-		<td><div id='SidebarPhoneNumber'></div></td>
-		<td rowspan='2'>
+		<td valign='top'><div id='SidebarPhoneNumber'></div></td>
+		<td valign='top' rowspan='2'>
 			<div class='EqualArticleColumn'>
 				<?php echo $this->leftArticleColumnViewModel;?>
 			</div><!-- EqualArticleColumn end -->
 		</td>
-		<td rowspan='2'>
+		<td valign='top' rowspan='2'>
 			<div class='EqualArticleColumn'>
 				<?php echo $this->rightArticleColumnViewModel;?>
 			</div><!-- EqualArticleColumn end -->
 		</td>
 	</tr>
 	<tr>
-		<td><div id='SidebarActivity'></div></td>
+		<td valign='top'><div id='SidebarActivity'></div></td>
 	</tr>
 </table>
 
