--- a/web/public/theme/default/common/layout.css
+++ b/web/public/theme/default/common/layout.css
@@ -2,22 +2,26 @@
 /*-------------------------------------布局表格开始-------------------------------------*/
 #ColumnsLayoutTable{/*用来显示布局的表格*/
 	width:100%;
-	height:530px;
-	border:1px solid #ff000;
+	height:auto;
+	/* border:1px solid #ff0000; */
 }
-#ColumnsLayoutTable tr td{/*布局表格的td的内边距*/
-	padding:3px 3px 3px 0px;	
+
+#ColumnsLayoutTable tbody tr td{/*用来显示布局的表格*/
+	margin:0px;
+	padding:2px 2px 2px 0px;
 }
+
 #BannerPictureContainer{/*栏目页的banner条*/
 	width:987px;
 	height:194px;
 }
 #SmallSlidePictureContainer{/*栏目页的图片容器*/
-	width:496px;
+	width:480px;
 	height:224px;
 	float:left;
+	margin-top:10px;
 	/* border:1px solid #ff0000; */
-	background:url(SmallSlidePictureContainer.jpg) no-repeat center center;
+	background:url(SmallSlidePictureContainer.jpg) no-repeat;
 }
 
 
@@ -30,6 +34,15 @@
 	width:231px;
 	height:93px;
 	background:url(SidebarActivity.jpg) no-repeat;
+}
+
+#SideArticleColumn{/*栏目页的图片容器旁边的栏目*/
+	width:270px;
+	height:240px;
+	float:left;
+	margin-left:3px;
+	background:#EBEEF5;
+/* 	border:1px solid #ff0000; */
 }
 
 
